# Detail_AR

./: LICENSE  README.md  Untitled  settings.gradle
app/: .gitignore  build.gradle
app/src/androidTest/java/com/example/detailar/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeCache.txt  CMakeLists.txt  Detail_AR_Main.cpp  Detect_Ball_Func.cpp  Detect_Ball_Func.hpp  Detect_Table_Func.cpp  Detect_Table_Func.hpp  Detection.cpp  Detection.hpp  FInd_Cam_Pos.cpp  Geo_Proc.cpp  Geo_Proc.hpp  add_ons.cpp  add_ons.h  basic.h  function.h  native-lib.cpp  solution.cpp  solution.hpp
app/src/main/cpp/detection_billiard/: basic.h  main.cpp  temp.cpp
app/src/main/java/com/example/detailar/: IntroActivity.java  IntroThread.java  MainActivity.java  PortraitCameraBridgeViewBase.java  PortraitCameraView.java
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_intro.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/detailar/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
sdk/: build.gradle
sdk/native/jni/include/opencv2/: core.hpp
